--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,9 @@ pipeline {
         DOCKER_IMAGE = 'python-app'
         AWS_REGION = 'us-east-1'
         INSTANCE_ID = 'i-0ee5037f620a32c2e'
+        AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
+        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
+        
     }
     stages {
         stage('Checkout') {
