--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,9 +4,8 @@ pipeline {
         DOCKER_IMAGE = 'python-app'
         AWS_REGION = 'us-east-1'
         INSTANCE_ID = 'i-0ee5037f620a32c2e'
-        AWS_ACCESS_KEY_ID = credentials('aws-access-key-id')
-        AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')
-
+        AWS_ACCESS_KEY_ID =  credentials('244efeee-5976-4a01-b22e-3067d02b2f7c')
+        AWS_SECRET_ACCESS_KEY = credentials('244efeee-5976-4a01-b22e-3067d02b2f7c')
     }
     stages {
         stage('Checkout') {
